[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
futures-util = "0.3.31"
hex = "0.4.3"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sled = "0.34.7"
tokio = {version = "1.44.1", features=["full"]}
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = "0.26.2"
